# waiz-hackthon-1

./: README.md  vercel.json
.agent/workflows/: sp.constitution.md  sp.plan.md  sp.specify.md
chatbot-backend/: .env  .env.example  README.md  agent.py  all_models.txt  check_qdrant.py  client_dir.txt  database.py  embeddings.py  error_trace.txt  final_debug.txt  ingest-error.txt  ingest.py  isolated_results.txt  list_all_models.py  list_models.py  main.py  models_debug.txt  models_list.txt  pyproject.toml  quota_res.txt  requirements.txt  search_debug.txt  server_log.txt  test_25.txt  test_agent.py  test_db.py  test_endpoint.py  test_isolated.py  test_magic.py  test_models_quota.py  test_qp.py  test_results.txt  test_search.py  test_sqlalchemy.py
history/: 001-setup-and-curriculum.md  002-rag-chatbot-implementation.md  003-quota-fix-and-debugging.md
my-website/: build-log.txt  build-output.txt  docusaurus.config.ts  package-lock.json
my-website/docs/: intro.md
my-website/docs/01-robotic-nervous-system/: 01-ros2-architecture.md  02-python-bridging.md  03-urdf-humanoid.md  04-hello-robot.md  _category_.json
my-website/docs/02-digital-twin/: 01-physics-engines.md  02-unity-rendering.md  03-sensor-simulation.md  04-obstacle-sensing.md  _category_.json
my-website/docs/03-ai-robot-brain/: 01-isaac-sim.md  02-visual-slam.md  03-nav2-navigation.md  04-room-mapping.md  _category_.json
my-website/docs/04-vision-language-action/: 01-voice-pipeline.md  02-cognitive-logic.md  03-autonomous-humanoid.md  _category_.json
prompts/: chatbot-system-prompt.md
(+10 files in other folders)
